--- a/app/templates/_parts/testimonial/testLaunchCarousel.html.twig
+++ b/app/templates/_parts/testimonial/testLaunchCarousel.html.twig
@@ -32,18 +32,24 @@
         <div class="carousel-inner">
 
             {% for item in data.items %}
-                {% set itemHasMedia = item.media.id is defined and item.media.id is not null %}
+                {% set itemHasMedia = item.media.ownerId is defined and item.media.ownerId is not null %}
                 <div class="carousel-item {% if loop.index == 1 %}active{% endif %}">
                     <div class="container">
                         <div class="testimonial carousel-caption">
                             {% if itemHasMedia %}
-                                {% if item.media.content is defined and item.media.content is not null %}
+                                {% if item.media.url is defined and item.media.url is not null%}
+                                    <img
+                                        src="{{ item.media.url }}"
+                                        class="rounded-circle mb-3"
+                                        alt="icon"
+                                    >
+                                {% elseif item.media.content is defined and item.media.content is not null %}
                                     <img
                                         src="data:{{ item.media.mimeType }};base64,{{ item.media.content }}"
                                         class="rounded-circle mb-3"
                                         alt="icon"
                                     >
-                                {% else %}
+                                {% elseif item.media.id is defined and item.media.id is not null %}
                                     <img
                                         src="{{ absolute_url(path('app_media_show', {'media': item.media.id})) }}"
                                         class="rounded-circle mb-3"
