--- a/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
@@ -34,6 +34,7 @@
         data-content-target="#{{ form.vars.id }}_media_catalog_content"
         data-btn-prev="#{{ form.vars.id }}_media_catalog_prev"
         data-btn-next="#{{ form.vars.id }}_media_catalog_next"
+        data-content-target-share-stock="#{{ form.vars.id }}_media_share_stock_content"
     >
         {{ label ?? 'Edit Image' }}
     </button>
