--- a/app/templates/_parts/how-it-works/testLaunch.html.twig
+++ b/app/templates/_parts/how-it-works/testLaunch.html.twig
@@ -12,7 +12,7 @@
 
         {% for step in data.items %}
             {% if step is not null %}
-                {% set stepHasMedia = step.media.id is defined and step.media.id is not null %}
+                {% set stepHasMedia = step.media.ownerId is defined and step.media.ownerId is not null %}
                 <div class="row mb-5">
 
                     <div class="{% if stepHasMedia %}col-md-7{% endif %} {% if loop.index % 2 == 0 %}order-md-2{% endif %}">
@@ -23,13 +23,19 @@
                     {% if stepHasMedia %}
                     <div class="col-md-5 {% if loop.index % 2 == 0 %}order-md-1{% endif %}">
 
-                        {% if step.media.content is defined and step.media.content is not null %}
+                        {% if step.media.url is defined and step.media.url is not null%}
+                            <img
+                                src="{{ step.media.url }}"
+                                class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+                                alt="icon"
+                            >
+                        {% elseif step.media.content is defined and step.media.content is not null %}
                             <img
                                 src="data:{{ step.media.mimeType }};base64,{{ step.media.content }}"
                                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
                                 alt="icon"
                             >
-                        {% else %}
+                        {% elseif step.media.id is defined and step.media.id is not null %}
                             <img
                                 src="{{ absolute_url(path('app_media_show', {'media': step.media.id})) }}"
                                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
