--- a/app/templates/control-panel/variant/builder/form-component/media-uploader-tab-pane-share-stock.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader-tab-pane-share-stock.html.twig
@@ -9,31 +9,14 @@
     <div class="tab-pane-content d-flex flex-column justify-content-between align-items-baseline">
 
         <div class="d-flex flex-row justify-content-between align-items-baseline w-100 pb-3">
-{#            {{ form_row(form.stockTags) }}#}
-
-            <button
-                id="{{ form.getFromStockBtn.vars.id }}_label"
-                type="button"
-                class="
-                    modal--nav-media-btn
-                    btn
-                    btn-dark
-                    m-0
-                    border-0
-                    shadow-none
-                    rounded-0
-                    p-3
-                "
-                data-click-target="#{{ form.getFromStockBtn.vars.id }}"
-            >
-                Get Random Image
-            </button>
+            {{ form_row(form.stockTags) }}
         </div>
 
         <div
             data-media-type="media_share_stock"
             data-click-target="#{{ form.getFromStockBtn.vars.id }}"
             data-media-id-field="#{{ form.systemId.vars.id }}"
+            data-media-url-field="#{{ form.url.vars.id }}"
             data-media-content-field="#{{ form.content.vars.id }}"
             data-click-target-mask="#{{ form.toGetFromStock.vars.id }}"
             id="{{ form.vars.id }}_media{{ tabId }}_content"
@@ -61,7 +44,7 @@
                     text-center
                 "
                 data-direction="-1"
-                data-content-target="#{{ form.vars.id }}_media{{ tabId }}_content"
+                data-content-target-share-stock="#{{ form.vars.id }}_media{{ tabId }}_content"
                 data-btn-prev="#{{ form.vars.id }}_media{{ tabId }}_prev"
                 data-btn-next="#{{ form.vars.id }}_media{{ tabId }}_next"
             >
@@ -84,7 +67,7 @@
                     p-2
                 "
                 data-direction="1"
-                data-content-target="#{{ form.vars.id }}_media{{ tabId }}_content"
+                data-content-target-share-stock="#{{ form.vars.id }}_media{{ tabId }}_content"
                 data-btn-prev="#{{ form.vars.id }}_media{{ tabId }}_prev"
                 data-btn-next="#{{ form.vars.id }}_media{{ tabId }}_next"
             >
@@ -108,7 +91,7 @@
                     text-center
                 "
                 data-direction="1"
-                data-content-target="#{{ form.vars.id }}_media{{ tabId }}_content"
+                data-content-target-share-stock="#{{ form.vars.id }}_media{{ tabId }}_content"
                 data-btn-prev="#{{ form.vars.id }}_media{{ tabId }}_prev"
                 data-btn-next="#{{ form.vars.id }}_media{{ tabId }}_next"
             >
