--- a/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
@@ -35,6 +35,7 @@
         data-btn-prev="#{{ form.vars.id }}_media_catalog_prev"
         data-btn-next="#{{ form.vars.id }}_media_catalog_next"
         data-content-target-share-stock="#{{ form.vars.id }}_media_share_stock_content"
+        data-content-target-ai="#{{ form.vars.id }}_media_ai_content"
     >
         {{ label ?? 'Edit Image' }}
     </button>
@@ -146,12 +147,12 @@
                                     rounded-0
                                     p-3
                                 "
-                                id="{{ form.vars.id }}_modal_ai_generate-tab"
+                                id="{{ form.vars.id }}_modal_ai-tab"
                                 data-bs-toggle="pill"
-                                data-bs-target="#{{ form.vars.id }}_modal_ai_generate"
+                                data-bs-target="#{{ form.vars.id }}_modal_ai"
                                 type="button"
                                 role="tab"
-                                aria-controls="{{ form.vars.id }}_modal_ai_generate"
+                                aria-controls="{{ form.vars.id }}_modal_ai"
                                 aria-selected="false"
                             >
                                 AI Generated
@@ -163,29 +164,7 @@
                         {% include 'control-panel/variant/builder/form-component/media-uploader-tab-pane-my-catalog.html.twig' %}
                         {% include 'control-panel/variant/builder/form-component/media-uploader-tab-pane-image-upload.html.twig' %}
                         {% include 'control-panel/variant/builder/form-component/media-uploader-tab-pane-share-stock.html.twig' %}
-
-
-
-                        <div class="tab-pane fade" id="{{ form.vars.id }}_modal_ai_generate" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_ai_generate-tab" tabindex="0">
-
-                            <label
-                                for="{{ form.generateBtn.vars.id }}"
-                                type="button"
-                                class="
-                                    modal--nav-media-btn
-                                    btn
-                                    btn-dark
-                                    m-0
-                                    border-0
-                                    shadow-none
-                                    rounded-0
-                                    p-3
-                                "
-                                data-click-target="#{{ form.generateBtn.vars.id }}"
-                            >
-                                Generate with AI
-                            </label>
-                        </div>
+                        {% include 'control-panel/variant/builder/form-component/media-uploader-tab-pane-ai.html.twig' %}
                     </div>
 
                 </div>
