--- a/app/public/assets/css/style-cp.css
+++ b/app/public/assets/css/style-cp.css
@@ -121,3 +121,20 @@ div::-webkit-scrollbar-thumb {
     min-width: 1rem;
 }
 
+:root {
+    --accordion-bg: var(--palette-danger-color);
+}
+
+.accordion-button:focus {
+    z-index: 3;
+    outline: 0;
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.accordion-button::after {
+    background-image: var(--bs-accordion-btn-icon-white);
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: var(--bs-accordion-btn-active-icon-white);
+}
