--- a/app/templates/_parts/features/testLaunch.html.twig
+++ b/app/templates/_parts/features/testLaunch.html.twig
@@ -12,7 +12,7 @@
         <div class="row">
 
             {% for feature in data.items %}
-                {% if feature.head is not null and feature.description is not null %}
+                {% if feature is not null %}
                     <div class="col-md-4">
                         {% if feature.media.ownerId is defined and feature.media.ownerId is not null %}
                             <div class="feature-icon mb-3">
