update subscriptions design. fix sidebar overflow. fix testimonial visibility configuration

--- a/app/templates/control-panel/variant/builder/sidebar/10---header.tab.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/10---header.tab.html.twig
@@ -16,3 +16,5 @@
 {{ form_row(form.brand.name, {'label': false}) }}
 
 {% include 'control-panel/variant/builder/form-component/media-uploader.html.twig' with {'form': form.brand.logo, 'label': 'Edit Brand Logo'} only %}
+
+<div class="pb-5 pt-5"></div>
