--- a/app/templates/control-panel/variant/builder/sidebar/30---hero.tab.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/30---hero.tab.html.twig
@@ -10,3 +10,5 @@
 {% include 'control-panel/variant/builder/form-component/call-to-action-button.html.twig' with {'form': form.callToActionButton} only %}
 
 {% include 'control-panel/variant/builder/form-component/media-uploader.html.twig' with {'form': form.media, 'label': 'Edit Hero Image'} only %}
+
+<div class="pb-5 pt-5"></div>
