--- a/app/templates/control-panel/variant/builder/sidebar/80---newsletter.tab.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/80---newsletter.tab.html.twig
@@ -10,3 +10,5 @@
 {{ form_row(form.inputFieldPlaceholder) }}
 
 {% include 'control-panel/variant/builder/form-component/call-to-action-button.html.twig' with {'form': form.callToActionButton} only %}
+
+<div class="pb-5 pt-5"></div>
