add public readme

--- a/app/templates/control-panel/variant/builder/index.html.twig
+++ b/app/templates/control-panel/variant/builder/index.html.twig
@@ -19,8 +19,8 @@
                 class="
                     bg-light
                     scroll-primary
-                    col-4
-                    col-lg-3
+                    col-5
+                    col-lg-4
                     min-vh-100
                     position-relative
                     pe-2
@@ -78,7 +78,7 @@
                                 class="
                                     sidebar--nav-top-btn
                                     btn
-                                    btn-dark
+                                    btn-primary
                                     m-0
                                     border-0
                                     shadow-none
@@ -215,8 +215,8 @@
                 id="cp-panel-right"
 
                 class="
-                    col-8
-                    col-lg-9
+                    col-7
+                    col-lg-8
                     p-0
                     overflow-hidden
                     d-flex
